# LinuxBasicSkillPractice

./: .gitignore  CMakeLists.txt  README.md  backlog.h
accept/: CMakeLists.txt  accept.h  main.cpp
backlog/: CMakeLists.txt  backlog.h  backlog.md  main.cpp
cgi/: CGI服务基本原理.md  CMakeLists.txt  main.cpp
daytime_info/: CMakeLists.txt  Ubuntu开启daytime服务.md  main.cpp
epoll/: CMakeLists.txt  ltet.cpp  oneshot.cpp
http/: CMakeLists.txt  main.cpp
msg_oob/: CMakeLists.txt  msg_oob_recv.cpp  msg_oob_send.cpp
select/: CMakeLists.txt  main.cpp
sendfile/: CMakeLists.txt  main.cpp
splice/: CMakeLists.txt  main.cpp
tcp_buf/: CMakeLists.txt  tcp_recv_buf.cpp  tcp_send_buf.cpp
tee/: CMakeLists.txt  main.cpp
writev/: CMakeLists.txt  iovec.md  main.cpp
